--- a/style.css
+++ b/style.css
@@ -80,6 +80,24 @@ main {
   transition: all 0.6s ease-in-out;
   overflow: hidden;
 }
+.card-head {
+  width: 100%;
+  height: 80%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 0 0 25% 25%;
+  box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.5);
+}
+.card-body {
+  width: 100%;
+  height: 20%;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
 .layover {
   display: flex;
   justify-content: center;
@@ -116,23 +134,6 @@ main {
   opacity: 1;
 }
 
-.card-head {
-  width: 100%;
-  height: 70%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 0 0 25% 25%;
-}
-.card-body {
-  width: 100%;
-  height: 30%;
-  padding: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
 .first {
   left: 4%;
   opacity: 1;
@@ -156,7 +157,7 @@ main {
 .focus {
   transform: scale(1.2);
   pointer-events: all;
-  box-shadow: 0 1px 3px rgba(118, 185, 0, 1);
+  box-shadow: inset 0 -1px 3px #76b900;
 }
 .focus .layover {
   background: transparent;
